--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
     "name": "shiftify",
     "version": "1.0.0",
-    "main": "index.js",
+    "engines": {
+        "node": ">= 12"
+    },
     "scripts": {
-        "start": "electron .",
-        "fmt": "npx prettier -w ."
+        "build": "parcel build --public-url . src/index.ts src/index.html src/main.ts",
+        "watch": "parcel watch --public-url . src/index.ts src/index.html src/main.ts",
+        "start": "electron dist",
+        "fmt": "prettier -w ."
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
-    "dependencies": {
-        "electron": "^33.2.1"
+    "devDependencies": {
+        "@babel/preset-typescript": "^7.26.0",
+        "@types/electron": "^1.4.38",
+        "electron": "^33.2.1",
+        "parcel": "^2.13.3",
+        "prettier": "^3.4.2"
     }
 }
