--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "prettier": "^3.4.2"
     },
     "dependencies": {
+        "node-stream-zip": "^1.15.0",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "smol-toml": "^1.3.1"
     }
 }
