--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "include": ["src/**/*"],
     "compilerOptions": {
+        "target": "ES2021",
         "module": "CommonJS",
         "moduleResolution": "node",
         "jsx": "react-jsx",
